video player sizing and margins aligned correctly

--- a/client/src/sass/abstracts/_mixins.scss
+++ b/client/src/sass/abstracts/_mixins.scss
@@ -63,8 +63,13 @@
 // Box-Shadow Mixins
 
 @mixin std-box-shadow {
-  -webkit-box-shadow: 0 0.5vh 0.5vh $standard-shadow;
-  box-shadow: 0 0.5vh 0.5vh $standard-shadow;
+  -webkit-box-shadow: 0 1.0vh 0.5vh -0.5vh $standard-shadow;
+  box-shadow: 0 1.0vh 0.5vh -0.5vh $standard-shadow;
+}
+
+@mixin std-inset-shadow {
+  -webkit-box-shadow: inset 0 0vh 1vh $standard-shadow;
+  box-shadow: inset 0 0vh 1vh $standard-shadow;
 }
 
 // Menu Bar
