--- a/client/src/sass/pages/_videos.scss
+++ b/client/src/sass/pages/_videos.scss
@@ -1,15 +1,16 @@
 .videos-content-wrapper {
   @include flex;
-  background-color: rgba(35, 35, 35, 0.2);
   margin: $video-content-wrapper-height * 0.05 0;
   min-height: $video-content-wrapper-height;
   width: $video-content-wrapper-width;
 }
 
 .video-player-wrapper {
+  @include std-box-shadow;
   background-color: rgba(35, 35, 35, 0.2);
+  margin-right: $video-content-wrapper-width * 0.01;
   min-height: $video-content-wrapper-height;
-  width: $video-content-wrapper-width * 0.7;
+  width: $video-content-wrapper-width * 0.69;
 }
 
 .video-player-current {
@@ -18,6 +19,11 @@
   @include justify-center;
   background-color: rgba(35, 35, 35, 0.2);
   height: $video-content-wrapper-height * 0.7;
+  width: 100%;
+}
+
+.video-player-current span {
+  height: 100%;
   width: 100%;
 }
 
@@ -33,6 +39,7 @@
   @include flex;
   @include flex-column;
   @include align-center;
+  @include std-inset-shadow;
   height: $video-content-wrapper-height;
   overflow-y: scroll;
   width: $video-content-wrapper-width * 0.3;
